--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,13 @@ plugins {
 android {
     namespace 'com.example.myapplication'
     compileSdk 34
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 24
         targetSdk 34
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -35,10 +37,16 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.palette:palette:1.0.0'
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation("com.github.bumptech.glide:glide:4.16.0")
     annotationProcessor("com.github.bumptech.glide:compiler:4.16.0")
+
     implementation 'androidx.core:core:1.8.0'
     implementation 'androidx.media:media:1.6.0'
+    implementation 'androidx.work:work-runtime:2.9.0'
 }
+
+
+
