--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -34,7 +35,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".MusicService" android:enabled="true"/>
+        <service android:name=".MusicService" android:enabled="true" android:foregroundServiceType="mediaPlayback"
+            tools:ignore="ForegroundServicePermission" />
 
         <receiver android:name=".NotificationReceiver" android:enabled="true" android:exported="false">
             <intent-filter>
