--- a/lib/icons_pack/build.gradle
+++ b/lib/icons_pack/build.gradle
@@ -1,21 +1,16 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
-    namespace 'com.example.myapplication'
+    namespace 'com.example.icons_pack'
     compileSdk 34
-    compileSdkVersion 34
 
     defaultConfig {
-        applicationId "com.example.myapplication"
         minSdk 24
-        targetSdk 34
-        targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -34,20 +29,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.palette:palette:1.0.0'
     testImplementation 'junit:junit:4.13.2'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation("com.github.bumptech.glide:glide:4.16.0")
-    annotationProcessor("com.github.bumptech.glide:compiler:4.16.0")
-
-    implementation 'androidx.core:core:1.8.0'
-    implementation 'androidx.media:media:1.6.0'
-    implementation 'androidx.work:work-runtime:2.9.0'
-    implementation 'com.github.realgearinc:multi-sliding-up-panel:1.3.6'
 }
-
-
-
