--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,13 @@ dependencies {
     implementation 'androidx.core:core:1.8.0'
     implementation 'androidx.media:media:1.6.0'
     implementation 'androidx.work:work-runtime:2.9.0'
+
     implementation 'com.github.realgearinc:multi-sliding-up-panel:1.3.6'
+    implementation 'com.github.realgearinc:readable-bottom-bar:1.0.2'
+
+    implementation project(path: ':lib:extensions')
+    implementation project(path: ':lib:icons_pack')
+    implementation project(path: ':lib:mediaplayer')
 }
 
 
