--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:21.5.1'
     implementation 'com.google.firebase:firebase-core:12.0.1'
-    implementation 'com.google.firebase:firebase-firestore:24.10.3'
+    implementation("com.google.firebase:firebase-firestore")
     implementation 'com.google.cloud:google-cloud-firestore'
     testImplementation 'junit:junit:4.13.2'
 
