--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,11 @@ plugins {
 android {
     namespace 'com.example.myapplication'
     compileSdk 34
-    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 24
         targetSdk 34
-        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -38,9 +36,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:21.5.1'
-    implementation 'com.google.firebase:firebase-core:12.0.1'
-    implementation("com.google.firebase:firebase-firestore")
-    implementation 'com.google.cloud:google-cloud-firestore'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-firestore:24.10.3'
+    implementation 'androidx.activity:activity:1.8.2'
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -48,8 +46,8 @@ dependencies {
     implementation("com.github.bumptech.glide:glide:4.16.0")
     annotationProcessor("com.github.bumptech.glide:compiler:4.16.0")
 
-    implementation 'androidx.core:core:1.8.0'
-    implementation 'androidx.media:media:1.6.0'
+    implementation 'androidx.core:core:1.12.0'
+    implementation 'androidx.media:media:1.7.0'
     implementation 'androidx.work:work-runtime:2.9.0'
 
     implementation 'com.github.realgearinc:multi-sliding-up-panel:1.3.6'
