--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
+        android:name=".ApplicationClass"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,9 +16,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".ApplicationClass"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".DatabaseActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".AlbumDetails"
             android:exported="false" />
@@ -28,24 +37,25 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="Music App">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
-        <service android:name=".MusicService" android:enabled="true" android:foregroundServiceType="mediaPlayback"
+        <service
+            android:name=".MusicService"
+            android:enabled="true"
+            android:foregroundServiceType="mediaPlayback"
             tools:ignore="ForegroundServicePermission" />
 
-        <receiver android:name=".NotificationReceiver" android:enabled="true" android:exported="false">
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
-                <action android:name="PREVIOUS"/>
-                <action android:name="NEXT"/>
-                <action android:name="PLAY"/>
+                <action android:name="PREVIOUS" />
+                <action android:name="NEXT" />
+                <action android:name="PLAY" />
             </intent-filter>
         </receiver>
-
     </application>
 
 </manifest>
