--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.palette:palette:1.0.0'
+
     implementation 'com.google.firebase:firebase-analytics:21.5.1'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-firestore:24.10.3'
+    implementation 'com.google.firebase:firebase-messaging:23.4.1'
+
     implementation 'androidx.activity:activity:1.8.2'
     implementation 'com.google.firebase:firebase-perf:20.5.2'
     testImplementation 'junit:junit:4.13.2'
