--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-        tools:targetApi="31"
-        tools:overrideLibrary="com.realgear.readable_bottom_bar">
+        tools:overrideLibrary="com.realgear.readable_bottom_bar"
+        tools:targetApi="31">
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".DatabaseActivity"
             android:exported="true">
@@ -37,9 +43,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Music App">
-
-        </activity>
+            android:label="Music App" />
 
         <service
             android:name=".MusicService"
