--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-firestore:24.10.3'
     implementation 'com.google.firebase:firebase-messaging:23.4.1'
+    implementation 'com.google.firebase:firebase-database-collection:18.0.1'
+    implementation 'com.google.firebase:firebase-database-connection:16.0.2'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 
     implementation 'com.google.firebase:firebase-perf:20.5.2'
     testImplementation 'junit:junit:4.13.2'
