--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
         tools:overrideLibrary="com.realgear.readable_bottom_bar"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterActivity"
+            android:name=".LoginReg.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginReg.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".DatabaseActivity"
