--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,32 +21,40 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:overrideLibrary="com.realgear.readable_bottom_bar"
         tools:targetApi="31">
+
         <activity
             android:name=".LoginReg.RegisterActivity"
             android:exported="false" />
+
         <activity
             android:name=".LoginReg.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".DatabaseActivity"
             android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".AlbumDetails"
-            android:exported="false" />
-        <activity
-            android:name=".PlayerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="Music App">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".DatabaseActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".AlbumDetails"
+            android:exported="false" />
+
+        <activity
+            android:name=".PlayerActivity"
+            android:exported="false" />
+        <activity
+
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="Music App">
+
         </activity>
 
         <service
