--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,11 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.NOTIFICATION_SERVICE"/>
+    <uses-permission android:name="android.permission.NOTIFICATION_SERVICE" />
 
     <application
         android:name=".ApplicationClass"
@@ -21,11 +22,12 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:overrideLibrary="com.realgear.readable_bottom_bar"
         tools:targetApi="31">
-
+        <activity
+            android:name=".LoginReg.AccountInfoActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginReg.RegisterActivity"
             android:exported="false" />
-
         <activity
             android:name=".LoginReg.LoginActivity"
             android:exported="true">
@@ -35,27 +37,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".DatabaseActivity"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".AlbumDetails"
             android:exported="false" />
-
         <activity
             android:name=".PlayerActivity"
             android:exported="false" />
         <activity
-
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Music App">
-
-        </activity>
+            android:label="Music App"></activity>
 
         <service
             android:name=".MusicService"
@@ -73,7 +67,7 @@
                 <action android:name="PLAY" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.example.myapplication.NowPlayingFragmentBottom" />
+        <receiver android:name=".NowPlayingFragmentBottom" />
     </application>
 
 </manifest>
