--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         tools:overrideLibrary="com.realgear.readable_bottom_bar"
         tools:targetApi="31">
         <activity
+            android:name=".AddSongActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginReg.AccountInfoActivity"
             android:exported="false" />
         <activity
@@ -39,7 +42,7 @@
         </activity>
         <activity
             android:name=".DatabaseActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".AlbumDetails"
             android:exported="false" />
@@ -49,7 +52,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Music App"></activity>
+            android:label="Music App" />
 
         <service
             android:name=".MusicService"
