--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         tools:overrideLibrary="com.realgear.readable_bottom_bar"
         tools:targetApi="31">
         <activity
+            android:name=".DrawerActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddSongActivity"
             android:exported="false" />
         <activity
