--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.core:core:1.12.0'
     implementation 'androidx.media:media:1.7.0'
