--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.palette:palette:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation(platform('com.google.firebase:firebase-bom:32.7.4'))
     implementation 'com.google.firebase:firebase-analytics:21.5.1'
@@ -49,14 +50,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.3.0'
 
     implementation 'com.google.firebase:firebase-perf:20.5.2'
-    implementation 'androidx.activity:activity:1.8.0'
+    implementation 'androidx.activity:activity:1.8.2'
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
     implementation 'androidx.core:core:1.12.0'
     implementation 'androidx.media:media:1.7.0'
