--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         tools:overrideLibrary="com.realgear.readable_bottom_bar"
         tools:targetApi="31">
         <activity
+            android:name=".FavouriteSongsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddSongActivity"
             android:exported="false" />
         <activity
@@ -40,19 +43,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AlbumDetails"
             android:exported="false" />
-
         <activity
             android:name=".PlayerActivity"
             android:exported="true" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Crashtify"/>
+            android:label="Crashtify" />
 
         <service
             android:name=".MusicService"
@@ -70,7 +70,6 @@
                 <action android:name="PLAY" />
             </intent-filter>
         </receiver>
-<!--        <receiver android:name=".NowPlayingFragmentBottom" />-->
     </application>
 
 </manifest>
